# Thesis-LLM-in-CubeGUI-for-HPC-performance-Analysis

./: .gitignore  CMakeLists.txt  README.md
AI responses/: mpi_call_paths.ods
Analysis Results/: LLM-load-imbalance-analysis.xlsx
Benchmark profiles/: tealeaf-profile.cubex
Datasets/Benchmark profiles/: cubegui-tutorial-example-profile.cubex  dummy-induced-imbalance-profile.cubex
Datasets/Experiments and AI responses/: AI results.odt
Datasets/Real World Profiles/: mini-lpt-720-profile.cubex
src/AI-Plugin/: BlabladorChatPlugin.cpp  BlabladorChatPlugin.h  CMakeLists.txt
src/AIPlugin/: BlabladorChatPlugin.cpp  BlabladorChatPlugin.h
src/CallTreeToJSON/: CMakeLists.txt  CallTreeToJSONPlugin.cpp
src/SystemTreeToJSON/: CMakeLists.txt  ParseToJSONPlugin.cpp
src/initial-testing-json/CallTreeToJSON/: CallTreeToJSONPlugin.cpp  CallTreeToJSONPlugin.h
src/initial-testing-json/SystemTreeToJSON/: ParseToJSONPlugin.cpp
